--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.1.0",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "datatables.net-bs4": "^1.10.19",
     "jquery": "github:components/jquery",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
