--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,13 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css",
-              "src/styles.css"
+              "./node_modules/font-awesome/css/font-awesome.min.css"
+                      
             ],
             "scripts": [
               "./node_modules/jquery/jquery.min.js",
-              "./node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"             
             ]
           },
